<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.activities.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_circle_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/margin_start_16"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_circle_avatar"
            tools:text="@string/dummy_name" />

        <TextView
            android:id="@+id/detail_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_300"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            tools:text="@string/dummy_username" />

        <TextView
            android:id="@+id/detail_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_8"
            android:textColor="@color/grey_300"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/detail_circle_avatar"
            app:layout_constraintStart_toStartOf="@+id/detail_circle_avatar"
            app:layout_constraintTop_toBottomOf="@+id/detail_username"
            tools:text="@string/dummy_company" />

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_8"
            android:textColor="@color/grey_300"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/detail_circle_avatar"
            app:layout_constraintStart_toStartOf="@+id/detail_circle_avatar"
            app:layout_constraintTop_toBottomOf="@+id/detail_company"
            tools:text="@string/dummy_location" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_top_8"
            android:background="@color/grey_500"
            app:layout_constraintTop_toBottomOf="@+id/detail_location"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/detail_value_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_16"
            android:layout_marginTop="@dimen/margin_start_16"
            android:textColor="@color/yellow_600"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:text="50" />

        <TextView
            android:id="@+id/detail_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/detail_value_following"
            app:layout_constraintStart_toEndOf="@+id/detail_value_following"
            app:layout_constraintTop_toTopOf="@+id/detail_value_following" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_icon_following"
            android:src="@drawable/ic_baseline_person_add_alt_1_50"
            app:layout_constraintBottom_toTopOf="@+id/tv_repository"
            app:layout_constraintEnd_toEndOf="@+id/detail_following"
            app:layout_constraintStart_toStartOf="@+id/detail_value_following"
            app:layout_constraintTop_toBottomOf="@+id/detail_value_following" />

        <TextView
            android:id="@+id/detail_value_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/detail_followers"
            app:layout_constraintEnd_toStartOf="@+id/detail_followers"
            app:layout_constraintTop_toTopOf="@+id/detail_followers"
            tools:text="50" />

        <TextView
            android:id="@+id/detail_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_start_16"
            android:text="@string/followers"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/detail_value_following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detail_value_following" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_icon_followers"
            android:src="@drawable/ic_baseline_supervisor_account_50"
            app:layout_constraintBottom_toTopOf="@+id/tv_repository"
            app:layout_constraintEnd_toEndOf="@+id/detail_followers"
            app:layout_constraintStart_toStartOf="@+id/detail_value_followers"
            app:layout_constraintTop_toBottomOf="@+id/detail_followers" />

        <ImageView
            android:id="@+id/ic_detail_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_icon_repository"
            android:src="@drawable/ic_baseline_folder_24"
            app:layout_constraintEnd_toStartOf="@+id/detail_value_followers"
            app:layout_constraintStart_toEndOf="@+id/detail_following"
            app:layout_constraintTop_toBottomOf="@+id/detail_value_following" />

        <TextView
            android:id="@+id/detail_value_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/detail_value_following"
            app:layout_constraintEnd_toStartOf="@+id/detail_value_followers"
            app:layout_constraintStart_toEndOf="@+id/detail_following"
            app:layout_constraintTop_toTopOf="@+id/detail_value_following"
            tools:text="50" />

        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repositories"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ic_detail_repo"
            app:layout_constraintStart_toStartOf="@+id/ic_detail_repo"
            app:layout_constraintTop_toBottomOf="@+id/ic_detail_repo" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/detail_tabs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_8"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/tv_repository"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorHeight="3dp"
            app:tabTextColor="@android:color/white"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/detail_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_tabs_layout" />

        <ProgressBar
            android:id="@+id/detail_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>