...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_empty_fav"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_empty_data"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_empty_state" />

    <TextView
        android:id="@+id/tv_empty_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_favorite_user"
        android:visibility="invisible"
        android:textSize="22sp"
        android:textStyle="bold"
...
